[package]
name = "step_sequencer"
version = "0.1.0"
authors = ["Cameron Devereaux"]
edition = "2021"
rust-version = "1.65"

[dependencies]
egui = "0.21.0"
egui_extras = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

rodio = { version="0.16.0", default-features = false, features = ["vorbis", "flac", "wav", "wasm-bindgen"] }

hound = "3.5.0"

# native:
tracing-subscriber = "0.3"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
